--- a/package.json
+++ b/package.json
@@ -5,6 +5,13 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build-prod": "ng build --prod --aot",
+    "clean-dist": "./node_modules/.bin/rimraf dist/packaging dist/strongbox-web-ui",
+    "clean-install": "./node_modules/.bin/rimraf node_modules && npm install",
+    "ci-build": "npm run clean-dist && npm run build-prod && npm run package",
+    "ci-test": "ng test --browsers ChromeHeadless",
+    "ci-e2e": "ng e2e --protractor-config ./e2e/protractor-ci.conf.js",
+    "package": "./node_modules/.bin/rimraf dist/packaging/* && ./node_modules/.bin/webpack",
     "test": "ng test --watch",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -36,6 +43,8 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
+    "compression-webpack-plugin": "^1.1.11",
+    "filemanager-webpack-plugin": "^1.0.26",
     "glob": "^7.1.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -49,6 +58,7 @@
     "rimraf": "^2.6.2",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "typescript": "~2.7.2",
+    "webpack-cli": "^3.0.3"
   }
 }
