--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "start": "ng serve --aot",
     "build": "npm run clean-dist && ng build",
     "build-prod": "npm run clean-dist && ng build --prod --aot",
+    "build-prod-stage": "npm run clean-dist && ng build --prod --aot --configuration=stage",
+    "build-prod-source-map": "npm run clean-dist && ng build --prod --aot --source-map && ./node_modules/.bin/source-map-explorer dist/strongbox-web-ui/main.*.js",
     "clean-dist": "./node_modules/.bin/rimraf dist/packaging dist/strongbox-web-ui",
     "clean-install": "./node_modules/.bin/rimraf node_modules && npm install",
     "ci-build": "npm run clean-dist && npm run build-prod && npm run package",
+    "ci-build-stage": "npm run clean-dist && npm run build-prod-stage && npm run package",
     "ci-test": "ng test --browsers ChromeHeadless",
-    "ci-e2e": "ng e2e --protractor-config ./e2e/protractor-ci.conf.js",
-    "package": "./node_modules/.bin/rimraf dist/packaging/* && ./node_modules/.bin/webpack",
+    "ci-e2e": "ng e2e --port 4201 --protractor-config ./e2e/protractor-ci.conf.js",
+    "package": "./node_modules/.bin/rimraf dist/packaging/* && ./node_modules/.bin/webpack --env.configuration=prod",
     "test": "ng test --watch",
     "lint": "ng lint",
     "e2e": "ng e2e --port 4201"
@@ -30,6 +33,9 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@ngx-progressbar/core": "^5.0.1",
+    "@ngx-progressbar/http": "^5.0.1",
+    "@ngx-progressbar/router": "^5.0.1",
     "core-js": "^2.5.4",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
@@ -56,6 +62,7 @@
     "protractor": "~5.3.0",
     "puppeteer": "^1.5.0",
     "rimraf": "^2.6.2",
+    "source-map-explorer": "^1.5.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
     "typescript": "~2.7.2",
