--- a/package.json
+++ b/package.json
@@ -29,13 +29,15 @@
     "@angular/flex-layout": "^6.0.0-beta.15",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
-    "@angular/material": "^6.2.1",
+    "@angular/material": "^6.3.0",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "@ngx-progressbar/core": "^5.0.1",
     "@ngx-progressbar/http": "^5.0.1",
     "@ngx-progressbar/router": "^5.0.1",
+    "@ngxs/router-plugin": "^3.1.4",
+    "@ngxs/store": "^3.1.4",
     "core-js": "^2.5.4",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
@@ -45,6 +47,8 @@
     "@angular/cli": "~6.0.8",
     "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
+    "@ngxs/devtools-plugin": "^3.1.4",
+    "@ngxs/logger-plugin": "^3.1.4",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
