Allow karma testing with Firefox to avoid issues with Chrome/Chromium in docker.

--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
     "ng": "ng",
     "start": "ng serve --aot",
     "build": "npm run clean-dist && ng build",
-    "build-prod": "npm run clean-dist && ng build --prod --aot",
-    "build-prod-stage": "npm run clean-dist && ng build --prod --aot --configuration=stage",
+    "build-prod": "npm run clean-dist && ng build --prod --aot --no-progress",
+    "build-prod-stage": "npm run clean-dist && ng build --prod --aot --configuration=stage --no-progress",
     "build-prod-source-map": "npm run clean-dist && ng build --prod --aot --source-map && ./node_modules/.bin/source-map-explorer dist/strongbox-web-ui/main.*.js",
     "clean-dist": "./node_modules/.bin/rimraf dist/packaging dist/strongbox-web-ui",
     "clean-install": "./node_modules/.bin/rimraf node_modules && npm install",
     "ci-build": "npm run clean-dist && npm run build-prod && npm run package",
     "ci-build-stage": "npm run clean-dist && npm run build-prod-stage && npm run package",
-    "ci-test": "ng test --browsers ChromeHeadless",
+    "ci-test": "ng test --browsers FirefoxHeadless",
     "ci-e2e": "ng e2e --port 4201 --protractor-config ./e2e/protractor-ci.conf.js",
     "package": "./node_modules/.bin/rimraf dist/packaging/* && ./node_modules/.bin/webpack --env.configuration=prod",
     "test": "ng test --watch",
@@ -62,8 +62,11 @@
     "karma": "~1.7.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.0",
+    "karma-firefox-launcher": "^1.1.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-sauce-launcher": "^1.2.0",
+    "karma-sourcemap-loader": "^0.3.7",
     "protractor": "~5.3.0",
     "puppeteer": "^1.5.0",
     "rimraf": "^2.6.2",
