Fixing failing e2e test under Firefox.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "package": "./node_modules/.bin/rimraf dist/packaging/* && ./node_modules/.bin/webpack --env.configuration=prod",
     "test": "ng test --watch",
     "lint": "ng lint",
-    "e2e": "ng e2e --port 4201"
+    "e2e": "ng e2e --port 4201",
+    "webdriver-update": "webdriver-manager update"
   },
   "private": true,
   "dependencies": {
