--- a/package.json
+++ b/package.json
@@ -69,8 +69,10 @@
     "karma-firefox-launcher": "~1.1.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-junit-reporter": "^1.2.0",
     "karma-sauce-launcher": "^1.2.0",
     "karma-sourcemap-loader": "^0.3.7",
+    "karma-summary-reporter": "^1.5.0",
     "protractor": "~5.4.0",
     "puppeteer": "^1.5.0",
     "rimraf": "^2.6.2",
