--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@ngxs/form-plugin": "^3.1.4",
     "@ngxs/router-plugin": "^3.1.4",
     "@ngxs/store": "^3.1.4",
+    "class-transformer": "^0.1.9",
     "core-js": "^2.5.4",
     "fonts-raleway": "0.0.4",
     "ionicons": "^4.2.4",
