--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "postinstall": "npm run webdriver-update",
     "ci-build": "npm run clean-dist && npm run build-prod && npm run package",
     "ci-build-stage": "npm run clean-dist && npm run build-prod-stage && npm run package",
-    "ci-test": "ng test --browsers ChromeHeadless",
+    "ci-test": "ng test --browsers HeadlessChrome,HeadlessFirefox",
     "ci-e2e": "ng e2e --port 4201 --protractor-config ./e2e/protractor-ci.conf.js",
     "package": "./node_modules/.bin/rimraf dist/packaging/* && ./node_modules/.bin/webpack --env.configuration=prod",
     "test": "ng test --watch --browsers Chrome --source-map=false",
@@ -77,7 +77,6 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-summary-reporter": "^1.5.1",
     "protractor": "~5.4.0",
-    "puppeteer": "^1.8.0",
     "rimraf": "^2.6.2",
     "source-map-explorer": "^1.6.0",
     "ts-node": "~5.0.1",
