--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build-prod": "npm run clean-dist && ng build --prod --aot --no-progress",
     "build-prod-stage": "npm run clean-dist && ng build --prod --aot --configuration=stage --no-progress",
     "build-prod-source-map": "npm run clean-dist && ng build --prod --aot --source-map && ./node_modules/.bin/source-map-explorer dist/strongbox-web-ui/main.*.js",
+    "serve-packaged": "./node_modules/.bin/http-server dist/packaging/strongbox-web-ui -p 4206 -g -c-1 -o",
     "clean-dist": "./node_modules/.bin/rimraf dist/packaging dist/strongbox-web-ui",
     "clean-install": "./node_modules/.bin/rimraf node_modules && npm install",
     "postinstall": "npm run webdriver-update",
@@ -64,6 +65,7 @@
     "compression-webpack-plugin": "^1.1.12",
     "filemanager-webpack-plugin": "^1.0.29",
     "glob": "^7.1.3",
+    "http-server": "^0.11.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^2.0.5",
