--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "serve-packaged": "./node_modules/.bin/http-server dist/packaging/strongbox-web-ui -p 4206 -g -c-1 -o",
     "clean-dist": "./node_modules/.bin/rimraf dist/packaging dist/strongbox-web-ui",
     "clean-install": "./node_modules/.bin/rimraf node_modules && npm install",
-    "postinstall": "npm run webdriver-update",
+    "postinstall": "npm run webdriver-update && npm run patch-antlr4 && npm run antlr4",
     "ci-build": "npm run clean-dist && npm run build-prod && npm run package",
     "ci-build-stage": "npm run clean-dist && npm run build-prod-stage && npm run package",
     "ci-test": "ng test --browsers HeadlessChrome,HeadlessFirefox",
@@ -20,7 +20,9 @@
     "test": "ng test --watch --browsers Chrome --source-map=false",
     "lint": "ng lint",
     "e2e": "ng e2e --port 4201",
-    "webdriver-update": "webdriver-manager update"
+    "webdriver-update": "webdriver-manager update",
+    "antlr4": "antlr4-tool --language javascript -o src/aql/ src/aql/AQL.g4",
+    "patch-antlr4": "replace '^var fs.*' 'var fs = false;' ./node_modules/antlr4/FileStream.js ./node_modules/antlr4/CharStreams.js"
   },
   "private": true,
   "dependencies": {
@@ -42,6 +44,9 @@
     "@ngxs/form-plugin": "^3.2.0",
     "@ngxs/router-plugin": "^3.2.0",
     "@ngxs/store": "^3.2.0",
+    "antlr4": "^4.7.1",
+    "antlr4-autosuggest": "0.0.28",
+    "antlr4ts": "^0.4.1-alpha.0",
     "class-transformer": "^0.1.10",
     "core-js": "^2.5.7",
     "fonts-raleway": "0.0.4",
@@ -58,9 +63,11 @@
     "@angular/language-service": "^7.0.1",
     "@ngxs/devtools-plugin": "^3.2.0",
     "@ngxs/logger-plugin": "^3.2.0",
+    "@types/antlr4-autosuggest": "0.0.0",
     "@types/jasmine": "~2.8.9",
     "@types/jasminewd2": "~2.0.5",
     "@types/node": "~10.12.1",
+    "antlr4-tool": "~1.0.21",
     "codelyzer": "~4.5.0",
     "compression-webpack-plugin": "^2.0.0",
     "filemanager-webpack-plugin": "^2.0.5",
@@ -79,11 +86,13 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-summary-reporter": "^1.5.1",
     "protractor": "~5.4.1",
+    "replace": "^1.0.0",
     "rimraf": "^2.6.2",
     "source-map-explorer": "^1.6.0",
     "ts-node": "~7.0.1",
     "tslint": "~5.11.0",
     "typescript": "~3.1.5",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^3.1.2",
+    "webpack-manifest-plugin": "^2.0.4"
   }
 }
