SB-1313 Layout improvements (updating dependencies)

--- a/package.json
+++ b/package.json
@@ -26,49 +26,51 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.0.1",
-    "@angular/cdk": "^7.0.2",
-    "@angular/common": "^7.0.1",
-    "@angular/compiler": "^7.0.1",
-    "@angular/core": "^7.0.1",
+    "@angular/animations": "^7.1.1",
+    "@angular/cdk": "^7.1.0",
+    "@angular/common": "^7.1.1",
+    "@angular/compiler": "^7.1.1",
+    "@angular/core": "^7.1.1",
     "@angular/flex-layout": "~7.0.0-beta.19",
-    "@angular/forms": "^7.0.1",
-    "@angular/http": "^7.0.1",
-    "@angular/material": "^7.0.2",
-    "@angular/platform-browser": "^7.0.1",
-    "@angular/platform-browser-dynamic": "^7.0.1",
-    "@angular/router": "^7.0.1",
+    "@angular/forms": "^7.1.1",
+    "@angular/http": "^7.1.1",
+    "@angular/material": "^7.1.0",
+    "@angular/platform-browser": "^7.1.1",
+    "@angular/platform-browser-dynamic": "^7.1.1",
+    "@angular/router": "^7.1.1",
     "@ngx-progressbar/core": "^5.2.1",
     "@ngx-progressbar/http": "^5.2.1",
     "@ngx-progressbar/router": "^5.2.1",
-    "@ngxs/form-plugin": "^3.2.0",
-    "@ngxs/router-plugin": "^3.2.0",
-    "@ngxs/store": "^3.2.0",
+    "@ngxs/form-plugin": "^3.3.1",
+    "@ngxs/router-plugin": "^3.3.1",
+    "@ngxs/store": "^3.3.1",
     "antlr4": "^4.7.1",
     "antlr4-autosuggest": "0.0.28",
     "antlr4ts": "^0.4.1-alpha.0",
-    "class-transformer": "^0.1.10",
+    "class-transformer": "^0.2.0",
     "core-js": "^2.5.7",
     "fonts-raleway": "0.0.4",
-    "ionicons": "^4.4.6",
+    "ionicons": "^4.4.8",
     "ngx-toastr": "^9.1.1",
     "open-sans-fontface": "^1.4.0",
     "rxjs": "^6.3.3",
+    "tslib": "^1.9.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.0",
-    "@angular/cli": "~7.0.3",
-    "@angular/compiler-cli": "^7.0.1",
-    "@angular/language-service": "^7.0.1",
-    "@ngxs/devtools-plugin": "^3.2.0",
-    "@ngxs/logger-plugin": "^3.2.0",
+    "@angular-devkit/build-angular": "~0.11.0",
+    "@angular/cli": "~7.1.0",
+    "@angular/compiler-cli": "^7.1.1",
+    "@angular/language-service": "^7.1.1",
+    "@ngxs/devtools-plugin": "^3.3.1",
+    "@ngxs/logger-plugin": "^3.3.1",
     "@types/antlr4-autosuggest": "0.0.0",
-    "@types/jasmine": "~2.8.9",
-    "@types/jasminewd2": "~2.0.5",
-    "@types/node": "~10.12.1",
+    "@types/jasmine": "~3.3.0",
+    "@types/jasminewd2": "~2.0.6",
+    "@types/node": "~10.12.10",
     "antlr4-tool": "~1.0.21",
     "codelyzer": "~4.5.0",
+    "compass-mixins": "^0.12.10",
     "compression-webpack-plugin": "^2.0.0",
     "filemanager-webpack-plugin": "^2.0.5",
     "glob": "^7.1.3",
@@ -79,7 +81,7 @@
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^2.0.4",
     "karma-firefox-launcher": "~1.1.0",
-    "karma-jasmine": "~1.1.2",
+    "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "karma-junit-reporter": "^1.2.0",
     "karma-sauce-launcher": "^1.2.0",
@@ -91,7 +93,7 @@
     "source-map-explorer": "^1.6.0",
     "ts-node": "~7.0.1",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.5",
+    "typescript": "~3.1.6",
     "webpack-cli": "^3.1.2",
     "webpack-manifest-plugin": "^2.0.4"
   }
