SB-1319 Create a page for managing storages and repositories
- Updating packages
- Fixing build failures (checkout https://github.com/MurhafSousli/ngx-progressbar/issues/217)

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build-prod-source-map": "npm run clean-dist && ng build --prod --aot --source-map && ./node_modules/.bin/source-map-explorer dist/strongbox-web-ui/main.*.js",
     "serve-packaged": "./node_modules/.bin/http-server dist/packaging/strongbox-web-ui -p 4206 -g -c-1 -o",
     "clean-dist": "./node_modules/.bin/rimraf dist/packaging dist/strongbox-web-ui",
-    "clean-install": "./node_modules/.bin/rimraf node_modules && npm install",
+    "clean-install": "./node_modules/.bin/rimraf node_modules && npm cache clear --force && npm install",
     "postinstall": "npm run webdriver-update && npm run patch-antlr4 && npm run antlr4",
     "ci-build": "npm run clean-dist && npm run build-prod && npm run package",
     "ci-build-stage": "npm run clean-dist && npm run build-prod-stage && npm run package",
@@ -26,29 +26,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.1.1",
-    "@angular/cdk": "^7.1.0",
-    "@angular/common": "^7.1.1",
-    "@angular/compiler": "^7.1.1",
-    "@angular/core": "^7.1.1",
-    "@angular/flex-layout": "~7.0.0-beta.19",
-    "@angular/forms": "^7.1.1",
-    "@angular/http": "^7.1.1",
-    "@angular/material": "^7.1.0",
-    "@angular/platform-browser": "^7.1.1",
-    "@angular/platform-browser-dynamic": "^7.1.1",
-    "@angular/router": "^7.1.1",
-    "@ngx-progressbar/core": "^5.2.1",
-    "@ngx-progressbar/http": "^5.2.1",
-    "@ngx-progressbar/router": "^5.2.1",
-    "@ngxs/form-plugin": "^3.3.1",
-    "@ngxs/router-plugin": "^3.3.1",
-    "@ngxs/store": "^3.3.1",
+    "@angular/animations": "~7.2.2",
+    "@angular/cdk": "~7.2.2",
+    "@angular/common": "~7.2.2",
+    "@angular/compiler": "~7.2.2",
+    "@angular/core": "~7.2.2",
+    "@angular/flex-layout": "~7.0.0-beta.23",
+    "@angular/forms": "~7.2.2",
+    "@angular/http": "~7.2.2",
+    "@angular/material": "~7.2.2",
+    "@angular/platform-browser": "~7.2.2",
+    "@angular/platform-browser-dynamic": "~7.2.2",
+    "@angular/router": "~7.2.2",
+    "@ngx-progressbar/core": "^5.3.1",
+    "@ngx-progressbar/http": "^5.3.1",
+    "@ngx-progressbar/router": "^5.3.1",
+    "@ngxs/form-plugin": "^3.3.4",
+    "@ngxs/router-plugin": "^3.3.4",
+    "@ngxs/store": "^3.3.4",
     "antlr4": "^4.7.1",
     "antlr4-autosuggest": "0.0.28",
     "antlr4ts": "^0.4.1-alpha.0",
     "class-transformer": "^0.2.0",
-    "core-js": "^2.5.7",
+    "core-js": "^2.6.3",
     "fonts-raleway": "0.0.4",
     "ionicons": "^4.4.8",
     "ngx-toastr": "^9.1.1",
@@ -58,12 +58,12 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.0",
-    "@angular/cli": "~7.1.0",
-    "@angular/compiler-cli": "^7.1.1",
-    "@angular/language-service": "^7.1.1",
-    "@ngxs/devtools-plugin": "^3.3.1",
-    "@ngxs/logger-plugin": "^3.3.1",
+    "@angular-devkit/build-angular": "~0.12.3",
+    "@angular/cli": "~7.2.3",
+    "@angular/compiler-cli": "~7.2.2",
+    "@angular/language-service": "~7.2.2",
+    "@ngxs/devtools-plugin": "^3.3.4",
+    "@ngxs/logger-plugin": "^3.3.4",
     "@types/antlr4-autosuggest": "0.0.0",
     "@types/jasmine": "~3.3.0",
     "@types/jasminewd2": "~2.0.6",
@@ -77,9 +77,9 @@
     "http-server": "^0.11.1",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^3.1.1",
+    "karma": "^3.1.4",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.4",
+    "karma-coverage-istanbul-reporter": "~2.0.4",
     "karma-firefox-launcher": "~1.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
