SB-1402 Upgrade to Angular 8.0

--- a/angular.json
+++ b/angular.json
@@ -75,6 +75,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
+            "deployUrl": "/",
             "browserTarget": "strongbox-web-ui:build"
           },
           "configurations": {
