--- a/package.json
+++ b/package.json
@@ -26,18 +26,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.6",
-    "@angular/cdk": "~7.2.2",
-    "@angular/common": "^7.2.6",
-    "@angular/compiler": "^7.2.6",
-    "@angular/core": "^7.2.6",
-    "@angular/flex-layout": "~7.0.0-beta.23",
-    "@angular/forms": "^7.2.6",
-    "@angular/http": "^7.2.6",
-    "@angular/material": "~7.2.2",
-    "@angular/platform-browser": "^7.2.6",
-    "@angular/platform-browser-dynamic": "^7.2.6",
-    "@angular/router": "^7.2.6",
+    "@angular/animations": "~8.0.0",
+    "@angular/cdk": "~8.0.1",
+    "@angular/common": "~8.0.0",
+    "@angular/compiler": "~8.0.0",
+    "@angular/core": "~8.0.0",
+    "@angular/flex-layout": "~8.0.0-beta.26",
+    "@angular/forms": "~8.0.0",
+    "@angular/material": "~8.0.1",
+    "@angular/platform-browser": "~8.0.0",
+    "@angular/platform-browser-dynamic": "~8.0.0",
+    "@angular/router": "~8.0.0",
     "@ngx-progressbar/core": "^5.3.2",
     "@ngx-progressbar/http": "^5.3.2",
     "@ngx-progressbar/router": "^5.3.2",
@@ -47,21 +46,21 @@
     "antlr4": "^4.7.1",
     "antlr4-autosuggest": "0.0.28",
     "antlr4ts": "^0.4.1-alpha.0",
-    "class-transformer": "^0.2.0",
+    "class-transformer": "~0.2.3",
     "core-js": "^2.6.3",
     "fonts-raleway": "0.0.4",
     "ionicons": "^4.4.8",
     "ngx-toastr": "^9.1.1",
     "open-sans-fontface": "^1.4.0",
-    "rxjs": "^6.3.3",
+    "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
-    "zone.js": "^0.8.26"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.12.3",
-    "@angular/cli": "~7.2.3",
-    "@angular/compiler-cli": "^7.2.6",
-    "@angular/language-service": "^7.2.6",
+    "@angular-devkit/build-angular": "~0.800.0",
+    "@angular/cli": "~8.0.2",
+    "@angular/compiler-cli": "~8.0.0",
+    "@angular/language-service": "~8.0.0",
     "@ngxs/devtools-plugin": "^3.3.4",
     "@ngxs/logger-plugin": "^3.3.4",
     "@types/antlr4-autosuggest": "0.0.0",
@@ -69,32 +68,31 @@
     "@types/jasminewd2": "~2.0.6",
     "@types/node": "~10.12.10",
     "antlr4-tool": "~1.0.21",
-    "codelyzer": "~4.5.0",
+    "codelyzer": "~5.0.1",
     "compass-mixins": "^0.12.10",
     "compression-webpack-plugin": "^2.0.0",
     "filemanager-webpack-plugin": "^2.0.5",
     "glob": "^7.1.3",
     "http-server": "^0.11.1",
-    "jasmine-core": "~3.3.0",
+    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^3.1.4",
+    "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.5",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-firefox-launcher": "~1.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "karma-junit-reporter": "^1.2.0",
-    "karma-sauce-launcher": "^1.2.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-summary-reporter": "^1.5.1",
-    "karma-verbose-reporter": "0.0.6",
+    "karma-sourcemap-loader": "~0.3.7",
+    "karma-summary-reporter": "~1.6.0",
+    "karma-verbose-reporter": "~0.0.6",
     "protractor": "~5.4.1",
     "replace": "^1.0.0",
     "rimraf": "^2.6.2",
     "source-map-explorer": "^1.6.0",
     "ts-node": "~7.0.1",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.6",
+    "typescript": "~3.4.5",
     "webpack-cli": "^3.1.2",
     "webpack-manifest-plugin": "^2.0.4"
   }
