--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "core-js": "^2.6.3",
     "fonts-raleway": "0.0.4",
     "ionicons": "^4.4.8",
-    "ngx-toastr": "^9.1.1",
+    "ngx-toastr": "~10.0.4",
     "open-sans-fontface": "^1.4.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
