--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "class-transformer": "~0.2.3",
     "core-js": "^2.6.3",
     "dayjs": "~1.8.15",
+    "event-source-polyfill": "^1.0.8",
     "fonts-raleway": "0.0.4",
     "ionicons": "^4.4.8",
     "ngx-toastr": "~10.0.4",
