--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "class-transformer": "~0.2.3",
     "core-js": "^2.6.3",
     "dayjs": "~1.8.15",
-    "event-source-polyfill": "^1.0.8",
+    "event-source-polyfill": "^1.0.9",
     "fonts-raleway": "0.0.4",
     "ionicons": "^4.4.8",
     "ngx-toastr": "~10.0.4",
@@ -93,6 +93,7 @@
     "protractor": "~5.4.1",
     "replace": "^1.0.0",
     "rimraf": "^2.6.2",
+    "rxjs-marbles": "^5.0.3",
     "source-map-explorer": "^1.6.0",
     "ts-node": "~7.0.1",
     "tslint": "~5.11.0",
