issue-1614: Lowering ngxs to 3.5.1 because 3.6.1 introduces breaking changes for us.

--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
     "@ngx-progressbar/core": "^5.3.2",
     "@ngx-progressbar/http": "^5.3.2",
     "@ngx-progressbar/router": "^5.3.2",
-    "@ngxs/form-plugin": "^3.3.4",
-    "@ngxs/router-plugin": "^3.3.4",
-    "@ngxs/store": "^3.3.4",
+    "@ngxs/form-plugin": "~3.5.1",
+    "@ngxs/router-plugin": "~3.5.1",
+    "@ngxs/store": "~3.5.1",
     "antlr4": "^4.7.1",
     "antlr4-autosuggest": "0.0.28",
     "antlr4ts": "^0.4.1-alpha.0",
