--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test": "ng test --watch --browsers Chrome --source-map=false",
     "lint": "ng lint",
     "e2e": "ng e2e --port 4201",
-    "webdriver-update": "webdriver-manager update",
+    "webdriver-update": "node update-webdriver.js ",
     "antlr4": "antlr4-tool --language javascript -o src/aql/ src/aql/AQL.g4",
     "patch-antlr4": "replace '^var fs.*' 'var fs = false;' ./node_modules/antlr4/FileStream.js ./node_modules/antlr4/CharStreams.js"
   },
@@ -76,6 +76,7 @@
     "compass-mixins": "^0.12.10",
     "compression-webpack-plugin": "^2.0.0",
     "filemanager-webpack-plugin": "^2.0.5",
+    "find-chrome-version": "^1.0.2",
     "glob": "^7.1.3",
     "http-server": "^0.11.1",
     "jasmine-core": "~3.4.0",
