--- a/package.json
+++ b/package.json
@@ -4,19 +4,15 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --aot",
-    "build": "npm run clean-dist && ng build",
-    "build-prod": "npm run clean-dist && ng build --prod --aot --no-progress",
-    "build-prod-stage": "npm run clean-dist && ng build --prod --aot --configuration=stage --no-progress",
-    "build-prod-source-map": "npm run clean-dist && ng build --prod --aot --source-map && ./node_modules/.bin/source-map-explorer dist/strongbox-web-ui/main.*.js",
+    "build": "npm run clean-dist && ng build --prod --aot",
+    "build-source-map": "npm run clean-dist && npm run build -- --source-map && ./node_modules/.bin/source-map-explorer dist/strongbox-web-ui/main.*.js",
     "serve-packaged": "./node_modules/.bin/http-server dist/packaging/strongbox-web-ui -p 4206 -g -c-1 -o",
-    "clean-dist": "./node_modules/.bin/rimraf dist/packaging dist/strongbox-web-ui",
+    "clean-dist": "./node_modules/.bin/rimraf dist",
     "clean-install": "./node_modules/.bin/rimraf node_modules && npm cache clear --force && npm install",
     "postinstall": "npm run webdriver-update && npm run patch-antlr4 && npm run antlr4",
-    "ci-build": "npm run clean-dist && npm run build-prod && npm run package",
-    "ci-build-stage": "npm run clean-dist && npm run build-prod-stage && npm run package",
+    "ci-build": "npm run clean-dist && npm run build -- --no-progress",
     "ci-test": "ng test --browsers HeadlessChrome,HeadlessFirefox",
     "ci-e2e": "ng e2e --port 4201 --protractor-config ./e2e/protractor-ci.conf.js",
-    "package": "./node_modules/.bin/rimraf dist/packaging/* && ./node_modules/.bin/webpack --env.configuration=prod",
     "test": "ng test --watch --browsers Chrome --source-map=false",
     "lint": "ng lint",
     "e2e": "ng e2e --port 4201",
