issue-1691: Updating webpack.config.js and removing `@angular-builders/custom-webpack` since it's introducing more issues than fixing.
Unfortunately we cannot use @angular-builders/custom-webpack the way we thought we could.
There are assets which are "emitted" after `webpack` has completed and exited which means that we cannot reliably customize the webpack plugins (i.e. index.html is copied after webpack has exited; same goes for angular differential loading which leads to half of the assets being gzipped and the other half remain unzipped because the assets are emitted after the webpack's involvement)

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
     "ng": "ng",
     "start": "ng serve --aot",
     "build": "npm run clean-dist && ng build --prod --aot",
-    "build-source-map": "npm run clean-dist && npm run build -- --source-map && ./node_modules/.bin/source-map-explorer dist/strongbox-web-ui/main.*.js",
-    "serve-packaged": "./node_modules/.bin/http-server dist/packaging/strongbox-web-ui -p 4206 -g -c-1 -o",
+    "postbuild": "./node_modules/.bin/webpack --config ./tools/webpack.config.js",
+    "build-source-map": "npm run clean-dist && npm run build -- --source-map && source-map-explorer dist/strongbox-web-ui/static/assets/main-es5.*.js && source-map-explorer dist/strongbox-web-ui/static/assets/main-es2015.*.js",
+    "serve-packaged": "./node_modules/.bin/http-server dist/strongbox-web-ui -p 4206 -g -c-1 -o",
     "clean-dist": "./node_modules/.bin/rimraf dist",
     "clean-install": "./node_modules/.bin/rimraf node_modules && npm cache clear --force && npm install",
     "postinstall": "npm run webdriver-update && npm run patch-antlr4 && npm run antlr4",
@@ -52,13 +53,11 @@
     "ngx-toastr": "~10.0.4",
     "ngx-virtual-scroller": "^3.0.3",
     "open-sans-fontface": "^1.4.0",
-    "replace-in-file": "^5.0.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "8.4.1",
     "@angular-devkit/build-angular": "0.803.25",
     "@angular/cli": "~8.3.25",
     "@angular/compiler-cli": "8.1.0",
@@ -90,7 +89,7 @@
     "karma-summary-reporter": "~1.6.0",
     "karma-verbose-reporter": "~0.0.6",
     "protractor": "~5.4.1",
-    "replace": "^1.0.0",
+    "replace-in-file": "^5.0.2",
     "rimraf": "^2.6.2",
     "rxjs-marbles": "^5.0.3",
     "source-map-explorer": "^1.6.0",
