--- a/angular.json
+++ b/angular.json
@@ -81,7 +81,7 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "strongbox-web-ui:build",
-            "proxyConfig": "proxy.conf.js",
+            "proxyConfig": "./tools/proxy.conf.js",
             "servePath": "/static/assets",
             "baseHref": "/",
             "deployUrl": "/static/assets/"
