--- a/package.json
+++ b/package.json
@@ -44,12 +44,14 @@
     "antlr4": "^4.7.1",
     "antlr4-autosuggest": "0.0.28",
     "antlr4ts": "^0.4.1-alpha.0",
+    "chart.js": "^2.9.3",
     "class-transformer": "~0.2.3",
     "core-js": "^2.6.3",
     "dayjs": "~1.8.15",
     "event-source-polyfill": "^1.0.9",
     "fonts-raleway": "0.0.4",
     "ionicons": "^4.4.8",
+    "ng2-charts": "^2.3.0",
     "ngx-toastr": "~10.0.4",
     "ngx-virtual-scroller": "^3.0.3",
     "open-sans-fontface": "^1.4.0",
