--- a/package.json
+++ b/package.json
@@ -23,17 +23,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.2.14",
+    "@angular/animations": "9.1.12",
     "@angular/cdk": "~8.0.1",
-    "@angular/common": "8.2.14",
-    "@angular/compiler": "8.2.14",
-    "@angular/core": "8.2.14",
+    "@angular/common": "9.1.12",
+    "@angular/compiler": "9.1.12",
+    "@angular/core": "9.1.12",
     "@angular/flex-layout": "~8.0.0-beta.26",
-    "@angular/forms": "8.2.14",
+    "@angular/forms": "9.1.12",
     "@angular/material": "~8.0.1",
-    "@angular/platform-browser": "8.2.14",
-    "@angular/platform-browser-dynamic": "8.2.14",
-    "@angular/router": "8.2.14",
+    "@angular/platform-browser": "9.1.12",
+    "@angular/platform-browser-dynamic": "9.1.12",
+    "@angular/router": "9.1.12",
     "@ng-select/ng-select": "^4.0.4",
     "@ngx-progressbar/core": "^5.3.2",
     "@ngx-progressbar/http": "^5.3.2",
@@ -55,23 +55,23 @@
     "ngx-toastr": "~10.0.4",
     "ngx-virtual-scroller": "^3.0.3",
     "open-sans-fontface": "^1.4.0",
-    "rxjs": "~6.4.0",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "rxjs": "~6.6.3",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.803.26",
-    "@angular/cli": "~8.3.26",
-    "@angular/compiler-cli": "8.2.14",
-    "@angular/language-service": "8.2.14",
+    "@angular-devkit/build-angular": "~0.901.12",
+    "@angular/cli": "~9.1.12",
+    "@angular/compiler-cli": "9.1.12",
+    "@angular/language-service": "9.1.12",
     "@ngxs/devtools-plugin": "^3.3.4",
     "@ngxs/logger-plugin": "^3.3.4",
     "@types/antlr4-autosuggest": "0.0.0",
     "@types/jasmine": "~3.3.0",
     "@types/jasminewd2": "~2.0.6",
-    "@types/node": "~10.12.10",
+    "@types/node": "^12.11.1",
     "antlr4-tool": "~1.0.21",
-    "codelyzer": "~5.0.1",
+    "codelyzer": "^5.1.2",
     "compass-mixins": "^0.12.10",
     "compression-webpack-plugin": "^2.0.0",
     "filemanager-webpack-plugin": "^2.0.5",
@@ -97,7 +97,7 @@
     "source-map-explorer": "^1.6.0",
     "ts-node": "~7.0.1",
     "tslint": "~5.11.0",
-    "typescript": "~3.4.5",
+    "typescript": "~3.8.3",
     "webpack-cli": "^3.1.2",
     "webpack-manifest-plugin": "^2.0.4"
   }
