--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/common": "9.1.12",
     "@angular/compiler": "9.1.12",
     "@angular/core": "9.1.12",
+    "@angular/flex-layout": "^9.0.0-beta.31",
     "@angular/forms": "9.1.12",
     "@angular/material": "~8.0.1",
     "@angular/platform-browser": "9.1.12",
