update ngx-progressbar to version 6.0.3

--- a/package.json
+++ b/package.json
@@ -35,9 +35,6 @@
     "@angular/platform-browser-dynamic": "10.1.6",
     "@angular/router": "10.1.6",
     "@ng-select/ng-select": "^4.0.4",
-    "@ngx-progressbar/core": "^5.3.2",
-    "@ngx-progressbar/http": "^5.3.2",
-    "@ngx-progressbar/router": "^5.3.2",
     "@ngxs/form-plugin": "~3.7.0",
     "@ngxs/router-plugin": "~3.7.0",
     "@ngxs/store": "~3.7.0",
@@ -52,6 +49,7 @@
     "fonts-raleway": "0.0.4",
     "ionicons": "^4.4.8",
     "ng2-charts": "^2.3.0",
+    "ngx-progressbar": "^6.0.3",
     "ngx-toastr": "~12.1.0",
     "ngx-virtual-scroller": "^3.0.3",
     "open-sans-fontface": "^1.4.0",
